# ev-tripchain

./: .gitignore  README.md  main.py  pyproject.toml
configs/: example.yaml  tripchain_soc.yaml
scripts/: bottleneck_analysis.py  parameter_sweep.py  strategy_comparison.py  validate_plots.py
src/ev_tripchain/: __main__.py  cli.py  config.py  rng.py
src/ev_tripchain/grid/: cases.py  constraints.py  powerflow.py
src/ev_tripchain/hosting_capacity/: evaluate.py  monte_carlo.py  search.py
src/ev_tripchain/mobility/: mapping.py  profile.py  soc.py  spatial.py  synthetic.py  trip_chain.py  tripchain_profile.py  tripchain_sampling.py
src/ev_tripchain/pipelines/: run.py
tests/: test_config.py  test_integration.py  test_mapping.py  test_monte_carlo.py  test_search.py  test_soc.py  test_spatial.py  test_tripchain_sampling.py
